css/innerpage.css
/* ... */
ul#navlist li:hover ul.subnavlist {
  display: block;
  position: absolute;
  font-size: 9pt;
  padding-top: 10px;
}
 ul#navlist li:hover ul.subnavlist li a {
   display: block;
   width: 10em;
   border: none;
   border-left: 2px;
   padding: 10px;
   opacity: 0.9;
 }
 ul#navlist li:hover ul.subnavlist li a:before {  content: "" }
/*headernavmenuend */
#leftpanellegal {
  width: 510px;
  float: left;
  padding: 10px;
  padding-top: 0px;
}

#rightpanellegal {
  width: 510px;
  float: left;
  padding: 10px;
  padding-top: 0px;
}

#pagetitle {
  top: 28px;
  position: absolute;
  text-align: right;
}
#pagetitle p {
  font-size: 18px;
  font-family: Abel;
  color: #8A8FA8;
  line-height: normal;
  padding-bottom: 12px;
}

#leftpanel {
  width: 196px;
  margin-right: 41px;
  float: left;
  padding-bottom: 20px;
}
#leftpanel p{
  width: 196px;
  margin-right: 41px;
  float: left;
  padding-bottom: 20px;
}
#middlepanel {
  width: 600px;
  padding-right: 41px;
  float: left;
  padding-bottom: 20px;
}
.limiddle {
  list-style-type: square;
  color: #8A8FA8;
  margin-left: 10px;
}
.whitepaperslist {
  list-style-type: square;
  color: #8A8FA8;
  font-size: 8pt;
  margin-left: 10px;
  margin-bottom: -10px;
}
.limiddlepanel {
  list-style-type: square;
  color: #8A8FA8;
  margin-left: 10px;
  margin-bottom: -10px;
}
#rightpanel {
  background-image: url(../images/rpagepannel.png);
  margin-top: 74px;
  width: 192px;
  float: left;
  height: 400px;
  background-repeat: no-repeat;
}
#hilightpaneltext {
  position: relative;
  top: 20px;
  width: 140px;
  left: 30px;
}
#hilightpaneltext ul li {
   position: relative;
   list-style-type: square;
   color: #9FA5C2;
   font-size: 8pt;
   margin-bottom: 10px;
   top: 20px;
   left: 20px;
   width: 120px;
 }

.center1panel {
  float: left;
  margin-right:22px;
  width:185px;
}

.center2panel {
  float: left;
  margin-right:22px;
  width:185px;
}

.center3panel {
  float: left;
  width:185px;
}

/*about*/
.aboutlogo {
  float: left;
  top: 20px;
  padding-left: 15px;
  padding-right: 15px;
  padding-bottom: 40px;
}
/*about*/
/*analyticsdatabase*/
#adpanel {
  width: 283px;
  float: left;
}
#adpanel ul li {
  list-style-type: square;
  color: #8A8FA8;
  margin-left: 20px;
}
#adrightpanel h2 {
  font-size: 11px;
  font-family: Rexlia;
  font-weight: normal;
  color: #ffffff;
  list-style-type: none;
  text-decoration: none;
  padding-bottom: 4px;
  padding-top: 4px;
}
/*analyticsdatabase*/
/*solutions*/
#solutionscard1 {
  background-image: url(../images/analyticsdatabasecard.png);
  height: 136px;
  width: 284px;
  margin-right: 30px;
  float: left;
}
#solutionscard2 {
  background-image: url(../images/visualizationenginecard.png);
  height: 136px;
  width: 284px;
  float: left;
}
.cards {
  width: 160px;
  float: left;
  padding-left: 154px;
  padding-top: 16px;
}
.cards p {
  padding:2px;
  color: #000000;
  font-size:13px;
}
/*solutions*/

/*support*/
.supportbuttons {
  margin:10px;
  float:left;
  left:20px;
  height:46px;
  width:258;
}
/*support*/

/*console*/
#console {
  height: 240px;
  width: 600px;
  background-color: #141417;
}
#output {
  height: 180px;
  width: 600px;
  background-color: #141417;
  margin-bottom: 20px;
}
#inputconsole {
  background-color: transparent;
  margin-left:5px;
  margin-top:5px;
  height:217px;
  font-family:courier;
  width:595px;
  resize: none;
}
/*console*/
/*consolemenubegin*/
#conlist {
  color: white;
  background-color: transparent;
  width: 116px;
  height: 23px;
  background-image: url(../images/consoleexamples.png);
}
#conlist:hover {  opacity: 0.7 }
#active1:hover li {  display: block }
#active1 li {  display: none }
#concontainer {
  width: 100px;
  background-color: transparent;
  float: left;
  z-index: 5;
}
 #concontainer a {
   color: ffcc33;
   font-family: abel;
   width: 120px;
   display: block;
   height: 23px;
   font-size: 12px;
   padding-left: 8px;
   padding-top: 2px;
 }
/*consolemenuend*/
/*contactus*/
.indicates-required {
  left: 200px;
  font-family: abel;
  font-size: 11px;
}
#mergeTable {
  top: 10px;
  width: 600px;
  font-family: abel;
  font-size: 11px;
  color: #000000;
}
.field-group input {
  border: 0 none;
  display: block;
  padding: 4px;
  width: 40%;
}
.field-group {
  border-style: solid;
  margin: 3px 0 10px;
}
#map {
  position: absolute;
  top: 76px;
  float: right;
  right: 40px;
}
/*contactus*/
/*pricing*/
#devsticker {
  position: absolute;
  top: 240px;
  left: 30px;
}
#pricingpagetable {
  background-image: url(../images/pricingsheet.png);
  height: 269px;
  width: 629px;
}

.pricingplan {
  position: relative;
  float: left;
  height: 269px;
  width: 150px;
}

.pricingcheckpad {
  padding-right: 8px;
}

.pricingplan .pricingdollar {top:64px;left:20px;font-size:11pt;color: #ffffff;float:left}
.pricingplan .pricingprice {top:60px;left:22px;font-size:24pt;color: #ffffff;float:left}
.pricingplan .pricingcents {top:64px;left:22px;font-size:13pt;color: #ffffff;float:left}
.pricingplan .pricingmonth {top:88px;left:0px;font-size:9pt;color: #ffffff;float:left}

.signupplan p {
  font-size: 11px;
  font-family: Abel;
  color: #ffffff;
  padding-bottom: 3px;
}

.pricingplan ul li {
  font-size: 11px;
  font-family: Abel;
  color: #ffffff;
  padding-bottom: 3px;
}

.planhas {
  float:left;
  top: 94px;
  left: 10px;
}

.planhas ul li {
  background: url(../images/checkmark.png)  left no-repeat;
  background-position: 0px -2px;
  padding-left: 20px;
  margin-bottom: 3px;
  overflow: visible;
}

.planhasnot {
  float:left;
  top: 94px;
  left: 10px;
}

.planhasnot ul li {
  background: url(../images/pricingxmark.png)  left no-repeat;
  background-position: 0px -2px;
  padding-left: 20px;
  margin-bottom: 3px;
  overflow: visible;
}

.pricingfloatleft {
  float: left;
  margin-right: 15px;
}
.pricingfloatright {
  float: right;
  margin-left: 15px;
}
/* ... */

